feat crud role e user jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/alluniDB?currentSchema=public
+spring.datasource.url=jdbc:postgresql://localhost:5432/saudesolidaria?currentSchema=public
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+
 useSSL=false&serverTimezone=UTC
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
@@ -11,6 +13,6 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 #spring.flyway.schemas=public
 spring.flyway.baselineOnMigrate=true
-spring.flyway.locations=classpath:/migrations
+spring.flyway.locations=classpath:/migration
 security.jwt.expiration=30
 security.jwt.key=bmV5bWFy
